src/objects/ACCL__Call__c.object
<CustomObject>
    <description>Contains data of customer related calls.</description>
    <fields>
        <fullName>ACCL__Account_City__c</fullName>
        <formula>ACCL__Account__r.ACCL__City__c</formula>
        <label>Customer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Street__c</fullName>
        <formula>ACCL__Account__r.ACCL__Street__c</formula>
        <label>Customer Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <description>Customer associated to Call created</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Accountable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system displays the Initiator of the call as the initial accountable</description>
        <label>Accountable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountableCalls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Planned_Date__c</fullName>
        <label>Call Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Call Template associated to the Call</description>
        <label>Call Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matches found or call Template is not active.</errorMessage>
            <filterItems>
                <field>ACCL__Call_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Call_Template__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Creation_Date_and_Time__c</fullName>
        <label>Creation Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Creation_Mode__c</fullName>
        <label>Creation Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manually</fullName>
                    <default>true</default>
                    <label>Manually</label>
                </value>
                <value>
                    <fullName>Automatically</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Date_mock__c</fullName>
        <description>Help/Mock field to visualize calendar in visual force page. Value of this field won&apos;t be saved in the database.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Issue__c</fullName>
        <description>Stores the information about distribution issue for calls relevant for KPI calculation.</description>
        <label>Distribution Issue</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribution Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Rate_All__c</fullName>
        <description>Stores the information about distribution rate of all survey products for calls relevant for KPI calculation.</description>
        <label>Distribution Rate All</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Rate_Focus__c</fullName>
        <description>Stores the information about distribution rate of focus survey products for calls relevant for KPI calculation.</description>
        <label>Distribution Rate Focus</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Relevant__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Distribution Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Duration_Effective__c</fullName>
        <label>Duration Effective</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Duration_In_Minutes__c</fullName>
        <formula>( ACCL__End_Date_Time__c - ACCL__Start_Date_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__End_Date_Time__c</fullName>
        <defaultValue>NOW()+1</defaultValue>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__End_Date__c</fullName>
        <description>helper field, do not need to show on page layout</description>
        <formula>DATEVALUE(ACCL__End_Date_Time__c)</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Fixed_Call_Date__c</fullName>
        <label>Fixed Call Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Geolocation__c</fullName>
        <description>Coordinate of business partner location (main address) taken on mobility on premise application during the call completion or cancellation.</description>
        <inlineHelpText>Latitude (-90; 90)
Longitude (-180; 180)</inlineHelpText>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ACCL__IsAllDayEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All-Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Location_Status__c</fullName>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GPS Inactive</fullName>
                </value>
                <value>
                    <fullName>No GPS Fix</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Number_Mock__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__OOS_Issue__c</fullName>
        <description>Stores the information about OoS issue for calls relevant for KPI calculation.</description>
        <label>OoS Issue</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__OOS_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OoS Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__OOS_Rate_All__c</fullName>
        <description>Stores the information about OoS rate of all survey products for calls relevant for KPI calculation.</description>
        <label>OoS Rate All</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_Start_Date__c</fullName>
        <description>This field is generated from the existing ACCL__Call__c .ACCL__Start_Date__c which is a formula field. This field is created so that it can be indexed as it is used in CAllOrderReorgBatch</description>
        <label>MDLZ_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__OOS_Rate_Focus__c</fullName>
        <description>Stores the information about OoS rate of focus survey products for calls relevant for KPI calculation.</description>
        <label>OoS Rate Focus</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__PSI__c</fullName>
        <description>Stores the result of the perfect store index determination.</description>
        <label>PSI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__PSQ_Rate__c</fullName>
        <description>Stores the information about PSQ rate determined for calls relevant for KPI calculation.</description>
        <label>PSQ Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unserviced</fullName>
                </value>
                <value>
                    <fullName>StoreClosed</fullName>
                </value>
                <value>
                    <fullName>TimeWindow</fullName>
                </value>
                <value>
                    <fullName>NoManager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Start_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Start_Date__c</fullName>
        <description>helper field, do not need to show on page layout</description>
        <formula>DATEVALUE(ACCL__Start_Date_Time__c)</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Start_Time_Effective__c</fullName>
        <label>Start Time Effective</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>Unscheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Stop_Time_Effective__c</fullName>
        <label>Stop Time Effective</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Subject_Formula__c</fullName>
        <description>Formula field based on subject text field</description>
        <formula>ACCL__Subject__c</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour</label>
        <referenceTo>ACCL__Tour__c</referenceTo>
        <relationshipLabel>Tour Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Update_Last_Modified_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Last Modified Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Upload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Upload Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Week__c</fullName>
        <label>Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccTeam__c</fullName>
        <description>Indicates the team information of the account. Used for filtering.</description>
        <formula>ACCL__Account__r.MDLZ_AccountTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccTerritory__c</fullName>
        <description>Indicates the territory information of the account. Used for filtering.</description>
        <formula>ACCL__Account__r.MDLZ_AccountTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveredUnits__c</fullName>
        <description>Interfaced value of total delivered units.</description>
        <label>Delivered Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveryDuration__c</fullName>
        <label>Delivery Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_Delivery_Time_Text__c</fullName>
        <label>Delivery Time Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>MDLZ_Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveryStart__c</fullName>
        <defaultValue>DATETIMEVALUE(&quot;1700-01-01 12:00:00&quot;)</defaultValue>
        <label>Delivery Start</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveryEnd__c</fullName>
        <defaultValue>DATETIMEVALUE(&quot;1700-01-01 12:00:00&quot;)</defaultValue>
        <label>Delivery End</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveryGroup__c</fullName>
        <label>Delivery Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Call</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Account_City__c</columns>
        <columns>ACCL__Account_Street__c</columns>
        <columns>ACCL__Start_Date_Time__c</columns>
        <columns>ACCL__End_Date_Time__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Subject__c</columns>
        <columns>ACCL__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Automatic_Calls</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Account_Street__c</columns>
        <columns>ACCL__Account_City__c</columns>
        <columns>ACCL__Start_Date_Time__c</columns>
        <columns>ACCL__End_Date_Time__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Subject__c</columns>
        <columns>ACCL__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Creation_Mode__c</field>
            <operation>equals</operation>
            <value>Automatically</value>
        </filters>
        <label>Automatic Calls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canceled_Calls</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Account_Street__c</columns>
        <columns>ACCL__Account_City__c</columns>
        <columns>ACCL__Start_Date_Time__c</columns>
        <columns>ACCL__End_Date_Time__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Subject__c</columns>
        <columns>ACCL__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled Calls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Calls</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Account_Street__c</columns>
        <columns>ACCL__Account_City__c</columns>
        <columns>ACCL__Start_Date_Time__c</columns>
        <columns>ACCL__End_Date_Time__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Subject__c</columns>
        <columns>ACCL__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Calls</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Planned_Calls</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Account_Street__c</columns>
        <columns>ACCL__Account_City__c</columns>
        <columns>ACCL__Start_Date_Time__c</columns>
        <columns>ACCL__End_Date_Time__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Subject__c</columns>
        <columns>ACCL__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Status__c</field>
            <operation>equals</operation>
            <value>Plan</value>
        </filters>
        <label>Planned Calls</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Delivery_Visit</fullName>
        <active>true</active>
        <description>Record type for DSD calls</description>
        <label>Delivery Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Editable</fullName>
        <active>true</active>
        <label>Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Call_Template_Required</fullName>
        <active>true</active>
        <description>The Call Template can&apos;t be empty.</description>
        <errorConditionFormula>ISBLANK(ACCL__Call_Template__c)</errorConditionFormula>
        <errorMessage>The Call Template can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Date_From_Has_To_Be_Before_Date_To</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Start_Date_Time__c &gt; ACCL__End_Date_Time__c</errorConditionFormula>
        <errorMessage>Start Date Time can&apos;t be later than End Date Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <description>The Customer and the Tour must have the same Sales Org.</description>
        <errorConditionFormula>AND( ACCL__Tour__r.Id &lt;&gt; null,(TEXT( ACCL__Account__r.ACCL__Account_Template__r.ACCL__Sales_Org__c ) &lt;&gt; TEXT( ACCL__Tour__r.ACCL__Tour_Template__r.ACCL__Sales_Org__c )))</errorConditionFormula>
        <errorMessage>The Customer and the Tour must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_all_lookups</fullName>
        <active>true</active>
        <description>The Customer and the Call must have the same Sales Org.</description>
        <errorConditionFormula>TEXT(ACCL__Call_Template__r.ACCL__Sales_Org__c) &lt;&gt; ACCL__Account__r.ACCL__Sales_Org__c</errorConditionFormula>
        <errorMessage>The Customer and the Call must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>